--- a/index.css
+++ b/index.css
@@ -1,4 +1,14 @@
 body {
-	background-color: #999999;
+	background-color: #CCCCCC;
+}
+
+navigation {
+	background-color: #AAAAAA;
+	a:link {
+		color: red;
+	}
+	a:hover {
+		color: purple;
+	}
 }
 
